--1.1--
New features:
* extra operators for float coord