@@ -1,3 +1,4 @@
 --1.1--
 New features:
 * extra operators for float coord
+* Boundary checker
